@@ -913,8 +913,7 @@ class ResourceLoader {
 	 * @return string
 	 */
 	public static function makeLoaderConditionalScript( $script ) {
-		$script = str_replace( "\n", "\n\t", trim( $script ) );
-		return "if(window.mw){\n\t$script\n}\n";
+		return "if(window.mw){\n".trim( $script )."\n}";
 	}
 
 	/**
